--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,17 @@
   <script type="module" src="js/main.js"></script>
 </head>
 
-<body>
-  <header class="d-flex align-items-center pb-3 mb-3 p-3 border-bottom">
-    <button type="button" class="btn btn-light me-3" data-bs-toggle="offcanvas" data-bs-target="#Menu"><svg
-        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+<body data-bs-theme="dark">
+  <header class="d-flex align-items-center pb-3 mb-3 p-3 border-bottom sticky-top">
+    <button type="button" class="btn btn-dark me-3" data-bs-toggle="offcanvas" data-bs-target="#Menu">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
         viewBox="0 0 16 16">
         <path fill-rule="evenodd"
           d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
       </svg>
     </button>
     <h1 class="d-flex align-content-center mb-0">
-      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+      <a href="/" class="d-flex align-items-center header-text text-decoration-none">
         Camberville People's Outreach
       </a>
     </h1>
