--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <header class="d-flex align-items-center pb-3 mb-3 p-3 border-bottom">
+  <header class="d-flex align-items-center justify-content-between mb-3 p-3 ps-5 mx-2 border-bottom">
+    <h1 class="d-flex align-content-center mb-0">
+      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+        Camberville People's Outreach
+      </a>
+    </h1>
     <button type="button" class="btn btn-light me-3" data-bs-toggle="offcanvas" data-bs-target="#Menu"><svg
         xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
         viewBox="0 0 16 16">
@@ -18,15 +23,10 @@
           d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
       </svg>
     </button>
-    <h1 class="d-flex align-content-center mb-0">
-      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        Camberville People's Outreach
-      </a>
-    </h1>
   </header>
 
   <!-- Off Canvas Start -->
-  <div class="offcanvas offcanvas-start" tabindex="-1" id="Menu" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="Menu" aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Menu</h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
