--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html lang=en><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><title>Camberville People's Outreach</title><link rel=stylesheet href=/peoplesoutreach.org.20cf0e06.css><script type=module src=/peoplesoutreach.org.bab92e9c.js></script><body>
-  <header class="align-items-center border-bottom d-flex mb-3 p-3 pb-3">
-    <button type=button class="btn btn-light me-3" data-bs-toggle=offcanvas data-bs-target=#Menu><svg xmlns:xmlns=http://www.w3.org/2000/svg width=16 height=16 fill=currentColor class="bi bi-list" viewBox="0 0 16 16"><path fill-rule=evenodd d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/></svg>
-    </button>
+  <header class="align-items-center border-bottom d-flex justify-content-between mb-3 mx-2 p-3 ps-5">
     <h1 class="align-content-center d-flex mb-0">
       <a href=/ class="align-items-center d-flex text-dark text-decoration-none">
         Camberville People's Outreach
       </a>
     </h1>
+    <button type=button class="btn btn-light me-3" data-bs-toggle=offcanvas data-bs-target=#Menu><svg xmlns:xmlns=http://www.w3.org/2000/svg width=16 height=16 fill=currentColor class="bi bi-list" viewBox="0 0 16 16"><path fill-rule=evenodd d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/></svg>
+    </button>
   </header>
 
   
-  <div class="offcanvas offcanvas-start" tabindex=-1 id=Menu aria-labelledby=offcanvasExampleLabel>
+  <div class="offcanvas offcanvas-end" tabindex=-1 id=Menu aria-labelledby=offcanvasExampleLabel>
     <div class=offcanvas-header>
       <h5 class=offcanvas-title>Menu</h5>
       <button type=button class="btn-close text-reset" data-bs-dismiss=offcanvas aria-label=Close></button>
