update placeholder text

--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,8 @@
 
     <section id="About-us">
       <h2>About us</h2>
-      <p>This is an about us section with plenty of information about Camberville People's Outreach
-        and
-        what we're about.
+      <p>
+        This section is still under construction. Check back soon!
       </p>
     </section>
 
@@ -79,11 +78,11 @@
     <section id="Donate">
       <h2>Donate</h2>
       <p>Your donations help us continue our mission of supporting the community. Find out how you can
-        contribute.
+        contribute. Right now, any proceeds will be put towards buying hand warmers in bulk for winter outreach.
       </p>
-      <!-- <p>
-        <a href="https://www.peoplesoutreach.org/">Donate here</a>
-      </p> -->
+      <p>
+        <a href="https://account.venmo.com/u/tpocamberville">Donate here</a>
+      </p>
     </section>
 
     <section id="Social-media">
